--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <title>apple</title>
         <link rel="stylesheet" href="style.css">
-    </head>
+        </head>
     <body>
         <div>
             <nav class="nav_bar">
+            <img class="apple_logo" src="assets/pictures/pngimg.com - apple_logo_PNG19666.png">
             </nav>
         </div>
     </body>
