--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <body>
         <div>
             <nav class="nav_bar">
-            <img class="apple_logo" src="assets/pictures/pngimg.com - apple_logo_PNG19666.png">
+            <img class="apple_logo" src="assets/apple_logo.png">
+            <ol class="nav_options">
+                <li>Store</li>
+                <li>Mac</li>
+                <li>Ipad</li>
+                <li>Iphone</li>
+                <li>Watch</li>
+                <li>Vision</li>
+                <li>AirPods</li>
+                <li>Tv&Home</li>
+                <li>Entertainment</li>
+                <li>Accessories</li>
+                <li>Support</li>
+                <img class="search_icon" src="assets/search_icon.jpg">
+                <img class="shop_bag_icon" src="assets/shop_bag_icon.jpg">
+            </ol>
             </nav>
         </div>
     </body>
