--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         </head>
     <body>
         <div>
+        <div>
             <nav class="nav_bar">
             <img class="apple_logo" src="assets/apple_logo.png">
             <ol class="nav_options">
@@ -24,6 +25,21 @@
                 <img class="shop_bag_icon" src="assets/shop_bag_icon.jpg">
             </ol>
             </nav>
+        </div>
+        <div class="hero_section">
+            <div class="brand_wrapper">
+            <h1 class="brand_name">iPhone</h1>
+            <p class="brand_subtitle">Meet the iPhone 16 Family.</p>
+            <button class="learnmore_button">Learn more</button>
+            <button class="shopiphone_button">Shop iPhone</button>
+            <p class="brand_subtitle2">Built for <span class="gradient">Apple Intelligence.</span></p>
+            <div class="iphone_sale_picture">
+                <div class="iphone_sale_picture_wrap">
+            <img class="iphone_sale_picture" src="assets/iphone_sale_picture.jpg">
+            </div>
+            </div>
+            </div>
+        </div>
         </div>
     </body>
 </html>
