--- a/index.html
+++ b/index.html
@@ -35,11 +35,23 @@
             <p class="brand_subtitle2">Built for <span class="gradient">Apple Intelligence.</span></p>
             <div class="iphone_sale_picture">
                 <div class="iphone_sale_picture_wrap">
-            <img class="iphone_sale_picture" src="assets/iphone_sale_picture.jpg">
+            <img class="iphone_sale_picture" src="assets/iphone_sale_picture.jpg"> 
             </div>
             </div>
             </div>
         </div>
+        <div class="second_div">
+            <img class="iphone_trade_img"src="assets/apple-trade-in-2025-removebg-preview.png">
+            <img class="apple_logo2"src="assets/apple_logo.png"><h2 class="trade_in">Trade In</h2>
+            <p class="trade_in_subtitle">Get extra credit toward a new</p>
+            <p class="trade_in_subtitle2">iphone when you trade in.<sup>1</sup></p>
+            <p class="trade_in_subtitle3">Now through 6.18</p>
+            <button class="get_your_estimate">Get your estimate</button>
+        </div>
+    </div>
+    <div class="third_div">
+        <img class="macbookair" src="">
+    </div>
         </div>
     </body>
 </html>
