--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
         </div>
     </div>
     <div class="third_div">
-        <img class="macbookair" src="">
+        <img class="macbookair_img" src="assets/macbook-air-og-202503-removebg-preview.png"><h2 class="macbookair_text">MacBook Air</h2>
+        <p class="macbookair_subtitle">Sky blue color.</p>
+        <p class="macbookair_subtitle2">Sky high performance with M4.</p>
+        <button class="learnmore_button2">Learn more</button>
+        <button class="buy_button">Buy</button>
+        <p class="brand_subtitle3">Built for <span class="gradient">Apple Intelligence.</span></p>
     </div>
         </div>
     </body>
