--- a/index.html
+++ b/index.html
@@ -57,6 +57,53 @@
         <button class="buy_button">Buy</button>
         <p class="brand_subtitle3">Built for <span class="gradient">Apple Intelligence.</span></p>
     </div>
+    <div class="container">
+        <div class="college_students"><img class="college_students_img" src="assets/618dc7f6dc13bfcfc9bcf4ccfb4c8ccf-removebg-preview.png">
+            <h3 class="college_students_txt">College Students</h3>
+            <p class="college_students_subtitle1">Mac and ipad.</p>
+            <p class="college_students_subtitle2">Major.In any field.</p>
+            <button class="learnmore_button3">Learn more</button>
+           </div>
+            <div class="privacy"><img class="privacy_img" src="assets/f6fbfcbec95fab10ae271932d7b2d4f2_L-removebg-preview.png">
+                <h3 class="privacy_txt">Privacy</h3>
+                <p class="privacy_subtitle1">That's iPhone.</p>
+                <button class="learnmore_button4">Learn more</button>
+            </div>
+    </div>
+    <div class="container2">
+        <div class="ipad_air"><img class="ipad_air_img" src="assets/ipad-air-295440208-16x9-removebg-preview.png">
+            <h3 class="ipad_air_txt">iPad <span class="air">air</span></h3>
+            <p class="ipad_subtitle1">Now supercharged by the M3 chip.</p>
+            <button class="learnmore_button5">Learn more</button>
+            <button class="buy_button2">buy</button>
+            <p class="ipad_subtitle2">Built for <span class="gradient2">Apple Intelligence.</span></p>
+        </div>
+    <div class="watches"><img class="watches_img" src="assets/Apple-Watch-Series-10-hero-240909-lp.jpg.og-removebg-preview.png">
+    <img class="apple_logo4"src="assets/apple_logo.png"><h2 class="watch_txt">WATCH</h2>
+    <h3 class="series10">SERIES 10</h3>
+    <p class="thinstant_classic">Thinstant classic.</p>
+    <button class="learnmore_button6">Learn more</button>
+    <button class="buy_button3">buy</button>
+    </div>
+    </div>
+        </div>
+        <div class="container3">
+        <div class="airpods_pro"><img class="airpods_img" src="assets/hearing-hero_startframe__f8es0fmuxgq6_large-removebg-preview.png">
+            <h1 class="airpods_pro_txt">Airpods Pro 2</h1>
+            <p class="airpods_pro_subtitle1">Now with a Hearing Aid feature.<sup>2</sup></p>
+            <button class="learnmore_button7">Learn more</button>
+            <button class="buy_button4">buy</button>
+            </div>
+            <div class="card"><img class="card_img" src="assets/mini-hero-apple-card-removebg-preview(1).png">
+            <img class="apple_logo5" src="assets/apple_logo.png">  
+            <h2 class="card_txt">Card</h2>
+            <p class="card_subtitle1">Get upto 3% Daily Cash back</p>
+            <p class="card_subtitle2">with every purchase.</p>
+            <button class="learnmore_button8">Learn more</button>
+            <button class="apply_now">Apply now</button>
+            </div>
+    </div>
+        </div>
         </div>
     </body>
 </html>
